...
import { ClientesRoute } from './routes/clientes-route';
import { CuentasPorCobrarRoute } from './routes/cuentas-por-cobrar-route';
import { EstadosRoute } from './routes/estados-route';
import { SettingsRoute } from './routes/settings-route';
import { OtrosRoute } from './routes/otros-route';
import { MermaRoute } from './routes/merma-route';
import { FuncionesRoute } from './routes/funciones-route';
import { UsuariosRoute } from './routes/usuarios-route';
import { EmpleadosRoute } from './routes/empleados-route';
import { CajaRoute } from './routes/caja-route';
import { ConversionRoute } from './routes/conversion-route';
import { NotificacionesRoute } from './routes/notificaciones-route';

function useDesktopNavigation(): {
...
